--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Create new Account"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:text="Please fill in the form to continue"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -210,6 +212,7 @@
         android:fontFamily="@font/roboto_medium"
         android:text="Joined us before? "
         android:textSize="16dp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
