--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#e87121</color>
+    <color name="lightOrange">#33e87121</color>
     <color name="grey">#5a5a5a</color>
     <color name="faded">#33FFFFFF</color>
 
