Add (Add bills icon)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,12 @@ tools:context=".home.MainActivity">
     android:id="@+id/bottom_navigation"
     app:labelVisibilityMode="labeled"
     app:backgroundTint="@color/faded"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="60dp"
+    app:itemIconTint="@color/white"
+    app:itemTextColor="@color/white"
+    app:itemBackground="@color/black"
+    app:itemIconSize="40dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
