--- a/app/src/main/res/layout/fragment_add_bills.xml
+++ b/app/src/main/res/layout/fragment_add_bills.xml
@@ -122,6 +122,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/dueDateInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         app:boxBackgroundColor="@color/faded"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -139,13 +140,14 @@
         app:layout_constraintTop_toBottomOf="@+id/frequencyInputLayout"
         >
 
-        <com.google.android.material.textfield.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/dueDateInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:dropDownHeight="wrap_content"
             android:hint="Due Date"
-            android:focusable="false"
-            android:textColorHint="@color/black"
+            android:inputType="none"
+
              />
 
     </com.google.android.material.textfield.TextInputLayout>
